# Chirply

./: .gitignore  Open Chirply.bat  README.md  pyproject.toml
server/: classify.py  main.py  requirements.txt  start.bat
src/chirply/: __init__.py  __main__.py  cli.py  desktop_app.py
web/: ambient.js  app.js  birds.js  birds3d.js  birdsVideo.js  cadGrid.js  index.html  styles.css
