[project]
name = "chirply"
version = "0.1.0"
description = "Chirply — hear a bird, know its name"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
app = ["pywebview>=5.0"]

[project.scripts]
chirply = "chirply.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
